Bump com.google.errorprone:error_prone_core from 2.46.0 to 2.47.0 (#120)
* Bump com.google.errorprone:error_prone_core from 2.46.0 to 2.47.0

Bumps [com.google.errorprone:error_prone_core](https://github.com/google/error-prone) from 2.46.0 to 2.47.0.
- [Release notes](https://github.com/google/error-prone/releases)
- [Commits](https://github.com/google/error-prone/compare/v2.46.0...v2.47.0)

---
updated-dependencies:
- dependency-name: com.google.errorprone:error_prone_core
  dependency-version: 2.47.0
  dependency-type: direct:production
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>

* error prone config fixes

---------

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: Cody Lerum <cody.lerum@gmail.com>